infra/academy_service_depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: academy-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: academy-service
  template:
    metadata:
      labels:
        app: academy-service
    spec:
      containers:
        - name: academy-service
          image: adhirajk/academy-service:1.0.0  # Replace with your image
          ports:
            - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: academy-service-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: academy-service
  ports:
    - port: 5001
      targetPort: 5001
