infra/academy_ui_depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: academy-ui-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: academy-ui
  template:
    metadata:
      labels:
        app: academy-ui
    spec:
      containers:
        - name: academy-ui
          image: adhirajk/academy-ui:1.0.0
          ports:
            - containerPort: 80  # Internal port exposed by the container
---
apiVersion: v1
kind: Service
metadata:
  name: academy-ui-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: academy-ui
  ports:
    - port: 3000  # Exposed port
      targetPort: 80  # The port inside the container
