infra/admin_academy_ui_depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-academy-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-academy-ui
  template:
    metadata:
      labels:
        app: admin-academy-ui
    spec:
      containers:
      - name: admin-academy-ui
        image: <your-docker-image-path>/admin-academy-ui:latest
        ports:
        - containerPort: 4201
---
apiVersion: v1
kind: Service
metadata:
  name: admin-academy-ui
spec:
  type: NodePort
  ports:
  - port: 4201
    targetPort: 4201
    nodePort: 30009
  selector:
    app: admin-academy-ui
