infra/admin_service_depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-service
  template:
    metadata:
      labels:
        app: admin-service
    spec:
      containers:
      - name: admin-service
        image: <your-docker-image-path>/admin-service:latest
        ports:
        - containerPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: admin-service
spec:
  type: NodePort
  ports:
  - port: 3003
    targetPort: 3003
    nodePort: 30012
  selector:
    app: admin-service
