infra/admin_ui_depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-ui-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-ui
  template:
    metadata:
      labels:
        app: admin-ui
    spec:
      containers:
        - name: admin-ui
          image: adhirajk/admin_ui:1.0.0   
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: admin-ui-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: admin-ui
  ports:
    - port: 4200
      targetPort: 80
