infra/common_service_depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: common-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: common-service
  template:
    metadata:
      labels:
        app: common-service
    spec:
      containers:
        - name: common-service
          image: adhirajk/common-service:1.0.0
          ports:
            - containerPort: 3004
---
apiVersion: v1
kind: Service
metadata:
  name: common-service-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: common-service
  ports:
    - port: 3004
      targetPort: 3004
