infra/sso_ui_depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sso-ui-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sso-ui
  template:
    metadata:
      labels:
        app: sso-ui
    spec:
      containers:
        - name: sso-ui
          image: adhirajk/sso_ui:1.0.1   # Replace with your image
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: sso-ui-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: sso-ui
  ports:
    - port: 3001
      targetPort: 80
