infra/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Origin, X-Requested-With, Content-Type, Accept, Authorization"
spec:
  ingressClassName: nginx
  rules:
    - host: veryown.com
      http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: landing-page-cluster-ip-service
                port:
                  number: 3002
    - host: sso.veryown.com
      http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: sso-ui-cluster-ip-service
                port:
                  number: 3001
    - host: api-auth.veryown.com
      http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service-cluster-ip-service
                port:
                  number: 5000
    - host: remote-academy.admin.veryown.com
      http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: admin-academy-ui-cluster-ip-service
                port:
                  number: 4201
    - host: admin.veryown.com
      http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: admin-ui-cluster-ip-service
                port:
                  number: 4200
    - host: overview.admin.veryown.com
      http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: admin-ui-cluster-ip-service
                port:
                  number: 4200
    - host: academy.admin.veryown.com
      http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: admin-ui-cluster-ip-service
                port:
                  number: 4200
    - host: api-academy.admin.veryown.com
      http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: academy-service-cluster-ip-service
                port:
                  number: 5001
